--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="equipment_format">Equipments: %s</string>
     <string name="equipment_not_found">No Equipments</string>
     <string name="equipment_header">Equipment</string>
+    <string name="num_active_filters">%d Active Filters</string>
 </resources>
