--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,9 @@
     <string name="minutes_length">%d minutes on %s</string>
     <string name="hours_length">%d hours on %s</string>
     <string name="seconds_length">%d seconds on %s</string>
+
+    <string name="bmi_underweight">BMI: %.1f\nUnderWeight</string>
+    <string name="bmi_normal">BMI: %.1f\nNormal</string>
+    <string name="bmi_overweight">BMI: %.1f\nOverWeight</string>
+    <string name="bmi_obese">BMI: %.1f\nObese</string>
 </resources>
